fix: font on mobile fix#1

--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
 h1, h2, h3, h4, h5, h6, p, button, .link-tag {
 	/* font-family: 'Alice', 'Courier New', Courier, monospace; */
 	color: #afa4a4;
-	font-size: x-small;
+	font-size: small;
 
 	@media (min-width: 480px) {
 		font-size: smaller;
@@ -332,7 +332,7 @@ article p {
 	display: flex;
 }
 .author-profilePic-date h1 {
-	font-size: .555rem;
+	font-size: .7rem;
 	text-wrap: nowrap;
 
 	@media (min-width: 480px) {
